{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 36,
  "lineage": "03737347-d52e-3507-2e83-ae80802eefe9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "podtatohead-arms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-043fe20f06f9f75a6",
            "arn": "arn:aws:ec2:us-east-1:892117093193:instance/i-0563e16f1a28b9e02",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0563e16f1a28b9e02",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0540cff3e2d57a6ab",
            "private_dns": "ip-172-31-13-184.ec2.internal",
            "private_ip": "172.31.13.184",
            "public_dns": "ec2-35-170-72-192.compute-1.amazonaws.com",
            "public_ip": "35.170.72.192",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0b731a4ae35fcbdbb",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00500fe0c152a96fc",
            "tags": {
              "Name": "podtatohead-arms"
            },
            "tags_all": {
              "Name": "podtatohead-arms"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0df82258a9322310a"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazon-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "podtatohead-hats",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-043fe20f06f9f75a6",
            "arn": "arn:aws:ec2:us-east-1:892117093193:instance/i-083b4f3b0721cfbe7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-083b4f3b0721cfbe7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00bd6a2873f6197b7",
            "private_dns": "ip-172-31-11-94.ec2.internal",
            "private_ip": "172.31.11.94",
            "public_dns": "ec2-44-199-246-220.compute-1.amazonaws.com",
            "public_ip": "44.199.246.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-04e2a085df06c7157",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00500fe0c152a96fc",
            "tags": {
              "Name": "podtatohead-hats"
            },
            "tags_all": {
              "Name": "podtatohead-hats"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0df82258a9322310a"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazon-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "podtatohead-legs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-043fe20f06f9f75a6",
            "arn": "arn:aws:ec2:us-east-1:892117093193:instance/i-018eca0342108a118",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-018eca0342108a118",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-079e84895153c7f65",
            "private_dns": "ip-172-31-4-151.ec2.internal",
            "private_ip": "172.31.4.151",
            "public_dns": "ec2-35-171-228-19.compute-1.amazonaws.com",
            "public_ip": "35.171.228.19",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0fae2013f3aaeaf1d",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00500fe0c152a96fc",
            "tags": {
              "Name": "podtatohead-legs"
            },
            "tags_all": {
              "Name": "podtatohead-legs"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0df82258a9322310a"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazon-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "podtatohead-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-043fe20f06f9f75a6",
            "arn": "arn:aws:ec2:us-east-1:892117093193:instance/i-073d0088a431617a7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-073d0088a431617a7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03bb82719b22c687e",
            "private_dns": "ip-172-31-10-49.ec2.internal",
            "private_ip": "172.31.10.49",
            "public_dns": "ec2-44-199-183-142.compute-1.amazonaws.com",
            "public_ip": "44.199.183.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-09c8f58c9043fd277",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "security_groups": [
              "allow-all-http",
              "allow-all-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00500fe0c152a96fc",
            "tags": {
              "Name": "podtatohead-main"
            },
            "tags_all": {
              "Name": "podtatohead-main"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06373d23375a70e00",
              "sg-0e1d6997276b9c14e"
            ]
          },
          "dependencies": [
            "aws_instance.podtatohead-hats",
            "aws_instance.podtatohead-legs",
            "aws_security_group.ingress-all-http",
            "aws_security_group.ingress-all-ssh",
            "data.aws_ami.amazon-2",
            "aws_instance.podtatohead-arms"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress-all-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:892117093193:security-group/sg-0e1d6997276b9c14e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1d6997276b9c14e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow-all-http",
            "name_prefix": "",
            "owner_id": "892117093193",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01624e0dd12d80316"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress-all-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:892117093193:security-group/sg-06373d23375a70e00",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06373d23375a70e00",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-all-ssh",
            "name_prefix": "",
            "owner_id": "892117093193",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01624e0dd12d80316"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}